[package]
name = "starforge"
version = "0.1.0"
edition = "2021"
description = "A developer productivity CLI for Stellar and Soroban workflows"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/starforge"
keywords = ["stellar", "soroban", "blockchain", "cli", "web3"]

[[bin]]
name = "starforge"
path = "src/main.rs"

[dependencies]
clap     = { version = "=4.4.18", features = ["derive", "color"] }
serde    = { version = "1.0",     features = ["derive"] }
serde_json = "1.0"
toml     = "=0.8.8"
colored  = "=2.1.0"
dirs     = "=5.0.1"
anyhow   = "1.0"
chrono   = { version = "0.4", features = ["serde"] }
rand     = "0.8"
ed25519-dalek = "2.1"
ureq       = { version = "=2.7.1", features = ["json"] }
clap_complete  = "=4.4.10"
dialoguer  = { version = "0.11", features = ["fuzzy-select"] }
stellar-strkey = "=0.0.9"
stellar-xdr = { version = "22.0.0", features = ["serde"] }
base64     = "0.21"
urlencoding = "2.1"

[profile.release]
opt-level = 3
lto = true
